# flascii_bird

./: .gitignore  CMakeLists.txt  main.cpp
assets/: gameover.txt  moon.txt  obstacle.txt  test.txt  test2.txt  test_tuyaux.txt  title.txt
assets/ascii_fonts/: spliff_0.txt  spliff_1.txt  spliff_2.txt  spliff_3.txt  spliff_4.txt  spliff_5.txt  spliff_6.txt  spliff_7.txt  spliff_8.txt  spliff_9.txt
assets/clouds/: cloud_0.txt  cloud_1.txt  cloud_2.txt  cloud_3.txt  cloud_4.txt
assets/stars/: star_0.txt  star_1.txt  star_2.txt
src/: AsciiRenderer.cpp  AsciiRenderer.h  AsciiSprite.cpp  AsciiSprite.h  BackgroundObject.cpp  BackgroundObject.h  CImg.h  Colliders.cpp  Colliders.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  Graphics.cpp  Graphics.h  IGraphics.cpp  IGraphics.h  InputManager.cpp  InputManager.h  Matrix.h  NYTimer.cpp  NYTimer.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Rect.cpp  Rect.h  Scene.cpp  Scene.h  ScoreBoardRetriever.cpp  ScoreBoardRetriever.h  ScoreDisplayer.cpp  ScoreDisplayer.h  SimpleGraphics.cpp  SimpleGraphics.h  (+14 more)
